// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connections should delete a single connection 1`] = `
Array [
  Object {
    "color": "gray",
    "database": "/Users/amila/Desktop/demo.sqlite",
    "id": "test-id-2",
    "name": "test-connection-2",
    "type": "sqlite",
  },
  Object {
    "color": "gray",
    "database": "/Users/amila/Desktop/demo.sqlite",
    "id": "test-id-3",
    "name": "test-connection-3",
    "type": "sqlite",
  },
]
`;

exports[`Connections should get a single connection 1`] = `
Object {
  "color": "gray",
  "database": "/Users/amila/Desktop/demo.sqlite",
  "id": "test-id-3",
  "name": "test-connection-3",
  "type": "sqlite",
}
`;

exports[`Connections should get all connections 1`] = `
Array [
  Object {
    "color": "gray",
    "database": "/Users/amila/Desktop/demo.sqlite",
    "id": "test-id-1",
    "name": "test-connection-1",
    "type": "sqlite",
  },
  Object {
    "color": "gray",
    "database": "/Users/amila/Desktop/demo.sqlite",
    "id": "test-id-2",
    "name": "test-connection-2",
    "type": "sqlite",
  },
  Object {
    "color": "gray",
    "database": "/Users/amila/Desktop/demo.sqlite",
    "id": "test-id-3",
    "name": "test-connection-3",
    "type": "sqlite",
  },
]
`;

exports[`Connections should perform basic validation 1`] = `
Object {
  "errorMessages": Array [
    Object {
      "fieldName": "id",
      "message": "\\"id\\" must be a string",
    },
    Object {
      "fieldName": "name",
      "message": "\\"name\\" is required",
    },
    Object {
      "fieldName": "database",
      "message": "\\"database\\" needs to be a file",
    },
    Object {
      "fieldName": "database",
      "message": "\\"database\\" does not exist",
    },
    Object {
      "fieldName": "database",
      "message": "\\"database\\" is not valid",
    },
  ],
  "passed": false,
}
`;

exports[`Connections should perform basic validation 2`] = `
Object {
  "errorMessages": Array [
    Object {
      "fieldName": "id",
      "message": "\\"id\\" must be a string",
    },
    Object {
      "fieldName": "name",
      "message": "\\"name\\" is required",
    },
    Object {
      "fieldName": "database",
      "message": "\\"database\\" does not exist",
    },
    Object {
      "fieldName": "database",
      "message": "\\"database\\" is not valid",
    },
  ],
  "passed": false,
}
`;

exports[`Connections should perform basic validation 3`] = `
Object {
  "errorMessages": Array [
    Object {
      "fieldName": "name",
      "message": "\\"name\\" is required",
    },
    Object {
      "fieldName": "database",
      "message": "\\"database\\" does not exist",
    },
    Object {
      "fieldName": "database",
      "message": "\\"database\\" is not valid",
    },
  ],
  "passed": false,
}
`;

exports[`Connections should perform basic validation 4`] = `
Object {
  "errorMessages": Array [
    Object {
      "fieldName": "database",
      "message": "\\"database\\" does not exist",
    },
    Object {
      "fieldName": "database",
      "message": "\\"database\\" is not valid",
    },
  ],
  "passed": false,
}
`;

exports[`Connections should perform basic validation 5`] = `
Object {
  "errorMessages": Array [
    Object {
      "fieldName": "database",
      "message": "\\"database\\" is not valid",
    },
  ],
  "passed": false,
}
`;

exports[`Connections should update a single connection 1`] = `
Array [
  Object {
    "color": "gray",
    "database": "/Users/amila/Desktop/demo.sqlite",
    "id": "test-id-1",
    "name": "test-connection-1",
    "type": "sqlite",
  },
  Object {
    "color": "gray",
    "database": "/Users/amila/Desktop/demo.sqlite",
    "id": "test-id-2",
    "name": "test-connection-2",
    "type": "sqlite",
  },
  Object {
    "color": "gray",
    "database": "/Users/amila/Desktop/demo.sqlite",
    "id": "test-id-3",
    "name": "test-connection-3",
    "type": "sqlite",
  },
]
`;
